# Duality

./: CMakeLists.txt
src/: main.cpp
src/Engine/Core/: Engine.h  Logger.cpp  Logger.h  Memory.cpp  Memory.h  Timer.cpp  Timer.h  Types.h  Window.cpp  Window.h
src/Engine/Input/: InputSystem.cpp  InputSystem.h
src/Engine/Math/: Math.h
src/Engine/Renderer/: VulkanContext.cpp  VulkanContext.h
src/Game/: ApocalypseGame.cpp  ApocalypseGame.h
src/Game/Character/: ElsySystem.cpp  ElsySystem.h  PlayerController.cpp  PlayerController.h
src/Game/UI/: UIManager.cpp  UIManager.h
src/Game/World/: WorldGenerator.cpp  WorldGenerator.h
